# slopcc

./: AGENTS.md  Cargo.toml  README.md  STATUS.md
crates/slopcc-arena/: Cargo.toml  README.md
crates/slopcc-arena/src/: boxed.rs  lib.rs  prelude.rs
crates/slopcc-common/: Cargo.toml  README.md
crates/slopcc-common/src/: diag.rs  lib.rs  prelude.rs  source.rs  span.rs
crates/slopcc-driver/: Cargo.toml
crates/slopcc-driver/src/: main.rs
crates/slopcc-lex/: Cargo.toml  README.md
crates/slopcc-lex/src/: cursor.rs  lexer.rs  lib.rs  token.rs
slopcc/: Cargo.toml  README.md
slopcc/src/: cli.rs  driver.rs  main.rs
